--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,24 @@
-# Compiled class file
-*.class
+# 忽略配置文件
+*.properties
+config/
+.env
 
-# Log file
-*.log
+# 忽略 target 目录
+target/
 
-# BlueJ files
-*.ctxt
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# 忽略 IDE 配置文件
+.idea/
+*.iml
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# 其他规则
+bin-debug/
+bin-release/
+[Oo]bj/
+[Bb]in/
+.settings/
+*.swf
+*.air
+*.ipa
+*.apk
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
